fix(global-styles): fix small title text color on dark mode

--- a/portfolio__frontend/styles/globals.css
+++ b/portfolio__frontend/styles/globals.css
@@ -16,7 +16,7 @@
   }
 
   .small-title {
-    @apply text-base text-black md:text-lg dark:text-gray-300;
+    @apply text-base text-black md:text-lg dark:text-gray-100;
   }
 
   .normal-paragraph {
